# modern-cpp-sensor-pipeline

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  sensor_pipeline.hpp  test_pipeline.cpp
